manifests/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-app
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: loan
  template:
    metadata:
      labels:
        app: loan
    spec:
      containers:
      - name: loan
        image: docker.io/kostiscodefresh/loan:latest 
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
