manifests/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: loan
  annotations:
    argocd.argoproj.io/sync-wave: "2"    
spec:
  type: ClusterIP
  selector:
    app: loan
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
