manifests/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "komodor-demo-ing"
  annotations:
    kubernetes.io/ingress.class: ambassador

spec:
  rules:
    - http:
        paths:
          - path: /loan/
            backend:
              serviceName: loan
              servicePort: 8080
